--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ fastapi==0.115.12
 h11==0.14.0
 huggingface-hub==0.24.6
 idna==3.10
-langchain==0.2.10
-langchain-community==0.2.11
+langchain==0.3.22
+langchain-community==0.3.20
 langchain-core==0.2.11
-langchain-groq==0.1.7
+langchain-groq==0.3.2
+langchain-text-splitters==0.3.7
 groq==0.6.0
 pydantic==2.11.2
 pydantic-core==2.33.1
@@ -22,3 +23,11 @@ transformers==4.42.4
 typing-extensions==4.13.0
 typing-inspection==0.4.0
 uvicorn==0.34.0
+langgraph==0.0.15
+psycopg2-binary==2.9.9
+python-jose==3.3.0
+SpeechRecognition==3.10.1
+pydub==0.25.1
+requests==2.31.0
+python-dateutil==2.8.2
+langchain-huggingface==0.1.2
